terraform/modules/vpc/main.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cider
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name        = "${var.vpc_name}-${var.environment}-vpc"
    Environment = var.environment
    ManagedBy   = "terraform"
    Project     = "healthflow-landing-zone"
  }
}

resource "aws_subnet" "public" {
  count             = length(var.public_subnet_cidr)
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.public_subnet_cidr[count.index]
  availability_zone = var.availability_zones[count.index]

  map_public_ip_on_launch = true

  tags = {
    Name        = "${var.vpc_name}-${var.environment}-public-subnet-${count.index + 1}"
    Environment = var.environment
    ManagedBy   = "terraform"
    Project     = "healthflow-landing-zone"
    type        = "public"
  }
}

resource "aws_subnet" "private" {
  count             = length(var.private_subnet_cidr)
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnet_cidr[count.index]
  availability_zone = var.availability_zones[count.index]

  map_public_ip_on_launch = false

  tags = {
    Name        = "${var.vpc_name}-${var.environment}-private-subnet-${count.index + 1}"
    Environment = var.environment
    type        = "private"
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name        = "${var.vpc_name}-${var.environment}-igw"
    Environment = var.environment
  }
}

# ELASTIC IP FOR NAT GATEWAY
resource "aws_eip" "nat" {
  domain = "vpc"
  tags = {
    Name        = "${var.vpc_name}-${var.environment}-nat-eip"
    Environment = var.environment
  }
}

# NAT GATEWAY (lives in first public subnet)
resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id

  tags = {
    Name        = "${var.vpc_name}-${var.environment}-nat-gateway"
    Environment = var.environment

  }

  depends_on = [aws_internet_gateway.main]
}

# PUBLIC ROUTE TABLE
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name        = "${var.vpc_name}-${var.environment}-public-rt"
    Environment = var.environment

  }
}

resource "aws_route_table_association" "public" {
  count          = length(var.public_subnet_cidr)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

# PRIVATE ROUTE TABLE
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main.id
  }

  tags = {
    Name        = "${var.vpc_name}-${var.environment}-private-rt"
    Environment = var.environment

  }
}

resource "aws_route_table_association" "private" {
  count          = length(var.private_subnet_cidr)
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
